--- a/2021-1/apunte/Cap.04.tex
+++ b/2021-1/apunte/Cap.04.tex
@@ -13,7 +13,7 @@ Para expresar este hecho es usual la notación
 $$
 a\equiv b \pmod2
 $$
-y se dice que $a$ es {\it congruente } a $b$ {\it módulo} $2$.
+y se dice que $a$ es \textit{congruente } a $b$ \textit{módulo} $2$.
 Es decir $a$ y $b$ son ambos pares o ambos impares si y solo
 si $a$ es congruente a $b$ módulo $2$.
 
@@ -65,12 +65,12 @@ Es fácil verificar que la {congruencia módulo} $m$ verifica las
 siguientes propiedades
 \begin{enumerate}[label=(\alph*)]
 \item
-Es {\it {reflexiva}} es decir $x\equiv x\pmod{m}$.
+Es \textit{{reflexiva}} es decir $x\equiv x\pmod{m}$.
 \item
-Es {\it {simétrica}}, es decir si $x \equiv y \pmod{m}$, entonces
+Es \textit{{simétrica}}, es decir si $x \equiv y \pmod{m}$, entonces
 $y \equiv x \pmod{m}$.
 \item
-Es {\it { transitiva}}, es decir si $x\equiv y \pmod{m}$ e
+Es \textit{{ transitiva}}, es decir si $x\equiv y \pmod{m}$ e
 $y\equiv z \pmod{m}$, entonces $x\equiv z \pmod{m}$.
 \end{enumerate}
 \begin{proof}
@@ -162,11 +162,11 @@ x_0+x_1+\cdots+x_n \pmod{9}$.
 El procedimiento anterior a veces es llamado ``regla del nueve''.
  \index{regla del nueve}
 
-\begin{ejemplo} Verifiquemos  el siguiente cálculo
+\begin{ejemplo*} Verifiquemos  el siguiente cálculo
 $$
 54\,321 \cdot 98\,765= 5\,363\,013\,565.
 $$
-\end{ejemplo}
+\end{ejemplo*}
 \begin{proof}
 En la notación de la proposición \ref{prop412} escribamos $\Sigma\, x$ en vez de $$\sum_{i=0}^n x_i = x_0+x_1+\cdots+x_n.$$
 Hemos visto que $\Sigma\, x \equiv x \pmod{9}$. Por la parte (b) del
@@ -195,14 +195,14 @@ consecuencia el cálculo está errado.
 
 %\begin{subsection}{Ejercicios}
 
-\subsection*{\Large $\S$ Ejercicios}
+\subsection*{$\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
 \begin{enumerate}
 \item Sin hacer ninguna ``multiplicación larga'' probar que
 \begin{enumerate}
-	\item $1\,234\,567 \cdot 90\,123 \equiv 1 \pmod{10}$
-	
-	\item $2468 \cdot 13\,579 \equiv -3 \pmod{25}$
+    \item $1\,234\,567 \cdot 90\,123 \equiv 1 \pmod{10}$
+    
+    \item $2\,468 \cdot 13\,579 \equiv -3 \pmod{25}$
 \end{enumerate}
 %$$\begin{aligned}
 %\text{(i)} \quad&1\,234\,567 \cdot 90\,123 \equiv 1 \pmod{10} \\
@@ -211,11 +211,11 @@ consecuencia el cálculo está errado.
 %$$
 \item Usar la regla del nueve para verificar que dos de las siguientes ecuaciones son falsas. ?`Qué se puede decir de la otra ecuación?
 \begin{enumerate}
-	\item  $5783 \cdot 40\,162  = 233\,256\,846 ,$
-	
-	\item  $9787 \cdot 1258  = 12\,342\,046 , $
-	
-	\item  $ 8901 \cdot 5743  = 52\,018\,443 .$
+    \item  $5\,783 \cdot 40\,162  = 233\,256\,846 ,$
+    
+    \item  $9\,787 \cdot 1\,258  = 12\,342\,046 , $
+    
+    \item  $ 8\,901 \cdot 5\,743  = 52\,018\,443 .$
 \end{enumerate}
 %$$\begin{aligned}
 %\text{(i)}  \quad &5783 \times 40\,162  = 233\,256\,846 , \\
@@ -248,14 +248,14 @@ $\mathbb Z$, pues cualquiera se $k \in \mathbb Z$, $2k-3$ es
 impar, luego no es divisible por $2$.
 
 Notemos además que si $x_0$ es solución de la ecuación
-(\ref{ecuacionlineal}), también lo es $x_0+km$ de manera que si la
+\ref{ecuacionlineal}, también lo es $x_0+km$ de manera que si la
 ecuación posee una solución, posee infinitas soluciones. Para
 evitar la ambigüedad de infinitas soluciones, nos limitaremos a
 considerar las soluciones tales que $0\le x < m$.
 
-\begin{ejemplo} La solución general de la ecuación $3x\equiv 7
+\begin{ejemplo*} La solución general de la ecuación $3x\equiv 7
 \pmod{11}$ es $6+k7$ con $k \in \mathbb Z$.
-\end{ejemplo}
+\end{ejemplo*}
 \begin{proof} Si probamos con los enteros $x$ tal que  $0\le x < 11$, veremos que la ecuación admite una única solución, a saber $x=6$. Otras soluciones se obtienen tomando $6+11k$. Por otra parte si $u$ es también solución de la ecuación, se tiene $3u \equiv 3\cdot 6 \pmod{11}$, por lo tanto $3(u-6)$ es múltiplo de $11$. Como $11$ no divide a $3$ se tiene que $11|(u-6)$, o sea $u=6+11k$.
 \end{proof}
 
@@ -298,7 +298,7 @@ Por lo tanto hemos demostrado que la condición necesaria y
 suficiente para que la ecuación $ax\equiv b \pmod{m}$ admita una
 solución es que $\mcd(a,m)|b$.
 
-En el caso que $d|b$ veamos ahora cuales son todas las soluciones posibles de la ecuación (\ref{elc}). Sean $x_1,x_2$ soluciones, es decir
+En el caso que $d|b$ veamos ahora cuales son todas las soluciones posibles de la ecuación \ref{elc}. Sean $x_1,x_2$ soluciones, es decir
 \begin{align*}
 ax_1 &\equiv b \pmod{m} \\
 ax_2 &\equiv b \pmod{m},
@@ -307,7 +307,7 @@ entonces, restando miembro a miembro, obtenemos
 $$
 ax_1 -ax_2 \equiv b - b \equiv 0 \pmod{m}.
 $$
-Es decir, $x_1,x_2$ son soluciones de la ecuación (\ref{elc}) si y sólo si  $y = x_1 -x_2$ es solución de la ecuación lineal de congruencia
+Es decir, $x_1,x_2$ son soluciones de la ecuación \ref{elc} si y sólo si  $y = x_1 -x_2$ es solución de la ecuación lineal de congruencia
 \begin{equation}\label{elc0}
 ay \equiv 0 \pmod{m}.
 \end{equation}
@@ -331,7 +331,7 @@ con $\mcd(a,m)|b$
 \begin{equation}\label{elc2}
 d =\mcd(a,m) = ra+sm.
 \end{equation}
-\item  Como $d|b$, tenemos que $b = td$ y multiplicamos la ecuación (\ref{elc2}) por $t$: $$dt =  (rt)a+(st)m.$$
+\item  Como $d|b$, tenemos que $b = td$ y multiplicamos la ecuación \ref{elc2} por $t$: $$dt =  (rt)a+(st)m.$$
 \item  $b = dt = (rt)a+(st)m \equiv (rt)a \pmod{m}$. 
 
 Luego $x_0 = rt$ es solución de la ecuación lineal de congruencia. 
@@ -345,8 +345,8 @@ Observemos que, en las hipótesis del teorema, si $\mcd(a,m) =1$, entonces siemp
 %\vskip .3cm
 
 
-\begin{ejemplo} Hallemos las soluciones de la ecuación $13x\equiv 7 \pmod{15}$ con $0\le x< 15$.
-\end{ejemplo}
+\begin{ejemplo*} Hallemos las soluciones de la ecuación $13x\equiv 7 \pmod{15}$ con $0\le x< 15$.
+\end{ejemplo*}
 \begin{proof}
 Hagamos, paso a paso, el procedimiento explicado anteriormente.
 
@@ -368,7 +368,7 @@ Es decir
 1 = 13\cdot 7 - 15\cdot 6. 
 \end{equation}
 
-(b) Multiplicando la ecuación (\ref{eq1315}) por $7$ obtenemos
+(b) Multiplicando la ecuación \ref{eq1315} por $7$ obtenemos
 $$
 7 = 13\cdot 49 - 15\cdot 42. 
 $$
@@ -384,9 +384,9 @@ Es decir la solución que buscamos es $x=4$.
 
 
 
-\begin{ejemplo} Hallemos las soluciones de la ecuación $42x\equiv
+\begin{ejemplo*} Hallemos las soluciones de la ecuación $42x\equiv
 50 \pmod{76}$ con $0\le x< 76$.
-\end{ejemplo}
+\end{ejemplo*}
 \begin{proof} Como antes, hagamos paso a paso el procedimiento explicado anteriormente.
 
 (a)
@@ -429,7 +429,7 @@ Luego $k = 6$ o $k =7$ y entonces $x_1 = -225 + 38\cdot 6 = 3$ y $x_2 = -225 + 3
 
 
 %\begin{subsection}{Ejercicios}
-\subsection*{\Large $\S$ Ejercicios}
+\subsection*{$\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
 Resolver las siguientes ecuaciones lineales de congruencia
 \begin{enumerate}
@@ -454,8 +454,8 @@ del Teorema (o fórmula) de Fermat.
 \end{enumerate}
 \end{lema}
 \begin{proof}
-	\
-	
+    \
+    
 \noindent({a})  Escribamos el número binomial de otra forma: 
 $$
 \binom{p}{r}=\frac{p!}{r!(p-r)!}=p\cdot\,\frac{(p-1)!}{r!(p-r)!}
@@ -465,7 +465,7 @@ es un número entero, digamos $k$, luego
 k \cdot r!(p-r)! = p \cdot(p-1)!
 \end{equation}
 Como $p-1$, $r$ y $p-r$ son menores que $p$, entonces  $(p-1)!$, $r!$ y $(p-r)!$ son producto de números menores que $p$ y por lo tanto son producto de primos menores que $p$. 
-Por lo tanto, el primo $p$ no aparece en la descomposición prima de $(p-1)!$, $r!$ y $(p-r)!$. Por la igualdad de la ecuación (\ref{binp}), $p$ debe ser factor de $k = \binom{p}{r}$, luego $p|\binom{p}{r}$.
+Por lo tanto, el primo $p$ no aparece en la descomposición prima de $(p-1)!$, $r!$ y $(p-r)!$. Por la igualdad de la ecuación \ref{binp}, $p$ debe ser factor de $k = \binom{p}{r}$, luego $p|\binom{p}{r}$.
 
 \noindent({b}) Por el teorema del binomio (teorema \ref{t3.6}) sabemos que
 $$
@@ -502,7 +502,7 @@ Supongamos que $a$ y $p$ son coprimos, por Fermat $p|(a^p
 -a)=a(a^{(p-1)} -1)$. Como $p$ no divide a $a$, tenemos que
 $p|(a^{(p-1)} -1)$, es decir 
 $$
-\text{\sl si $a$ y $p$ coprimos, entonces } a^{(p-1)}\equiv 1\pmod{p}.
+\textsl{si $a$ y $p$ coprimos, entonces } a^{(p-1)}\equiv 1\pmod{p}.
 $$
 Este último enunciado es también conocido como teorema de Fermat.
 
@@ -517,10 +517,10 @@ positivo y $a$ un número entero coprimo con $n$, entonces
 $$
 a^{\phi(n)} \equiv 1\pmod{n}
 $$
-(ver ejercicio (\ref{demdeeuler})).
+(ver ejercicio \ref{demdeeuler}, a continuación).
 
 %\begin{subsection}{Ejercicios}
-\subsection*{\Large $\S$ Ejercicios}
+\subsection*{$\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
 \begin{enumerate}
 \item Usar el teorema de Fermat para calcular el resto de dividir
@@ -574,7 +574,7 @@ En el sistema RSA deben realizarse algunos paso previos para fijar ciertos pará
 %\vskip .4cm 
 
 
-\noindent\textbf{Idea del  algoritmo}
+\subsection*{Idea del  algoritmo}
 
 Supongamos que la persona $B$  quiere enviar a la persona $A$ un mensaje $m$ pero encriptado de tal forma que sólo $A$ pueda leer su contenido. Por su parte $A$ hace públicos dos números $e$ y $n$ que son los que se utilizarán para encriptar los mensajes que le envíen. 
 
@@ -594,19 +594,19 @@ donde $d$ es la clave privada que solo $A$ conoce.
 
 %\vskip .3cm 
 
-\noindent \textbf{ $\S$ Elección de claves}
+\subsection*{Elección de claves}
 
 
 %\vskip .3cm 
 
 Dados primos distintos $p$ y $q$ suficientemente grandes tomamos $n = pq$. 
 \begin{itemize}
-	\item  La \emph{clave pública} es $n$ y $e$ con $1 < e < (p-1)(q-1)$ tal que $\operatorname{mcd}(e, (p-1)(q-1)) = 1$. 
-	\item  La \emph{clave privada} es un $d$ tal que $ed \equiv 1 \pmod{(p-1)(q-1)}$ y $0 \le d <(p-1)(q-1)$.
+    \item  La \emph{clave pública} es $n$ y $e$ con $1 < e < (p-1)(q-1)$ tal que $\operatorname{mcd}(e, (p-1)(q-1)) = 1$. 
+    \item  La \emph{clave privada} es un $d$ tal que $ed \equiv 1 \pmod{(p-1)(q-1)}$ y $0 \le d <(p-1)(q-1)$.
 \end{itemize}
 
 
-\begin{observacion} Algunos comentarios sobre la elección de $p,q,e,d$.
+\begin{observacion*} Algunos comentarios sobre la elección de $p,q,e,d$.
 \begin{itemize}
 \item
 Los dos primos $p$ y $q$ deberían tener alrededor de $100$ dígitos cada uno (longitud considerada segura en este momento).
@@ -616,12 +616,12 @@ El número $e$ puede elegirse pequeño y se selecciona haciendo prueba y error c
 La existencia de $d$ está garantizada por el teorema \ref{elc} (ecuación lineal de congruencia), pues $e$ y $(p-1)(q-1)$ son coprimos.
 \end{itemize}
 
-\end{observacion}
+\end{observacion*}
 
 
 %\vskip .4cm 
 
-\noindent \textbf{$\S$ Encriptar y desencriptar mensajes}
+\subsection*{Encriptar y desencriptar mensajes}
 
 %\vskip .3cm 
 El receptor de mensajes publicita la clave pública $(e,n)$. Obviamente no da a conocer ni $p$, ni $q$ y mantiene segura la clave privada $d$. Como mencionamos anteriormente, el envío del mensaje y su decodificación requiere dos pasos
@@ -649,20 +649,19 @@ Multiplicando esta ecuación por $m$ obtenemos
 \begin{equation}\label{rsa2}
 m^{1+k(p-1)(q-1)} \equiv m\pmod{p}. 
 \end{equation}
-Usando las ecuaciones (\ref{rsa1}) y (\ref{rsa2}) obtenemos:
+Usando las ecuaciones \ref{rsa1} y \ref{rsa2} obtenemos:
 \begin{equation}\label{rsa3}
 m^{ed} \equiv m\pmod{p} 
 \end{equation}
 Esto, si  $\operatorname{mcd}(m, p) = 1$. Pero si esto último no es cierto, entonces al ser $p$
-primo debemos tener $m \equiv 0\pmod{p}$ y en ese caso (\ref{rsa3}) es trivial (dice que $0 \equiv 0$).
-Con lo cual (\ref{rsa3}) es verdadero para todo $m$.
+primo debemos tener $m \equiv 0\pmod{p}$ y en ese caso la ecuación \ref{rsa3} es trivial (dice que $0 \equiv 0$). Concuyendo, la ecuación \ref{rsa3} se cumple para todo $m$.
 
-Obviamente la elección u orden de $p$ o $q$ es arbitraria, así que (\ref{rsa3}) también es verdadera si reemplazamos $p$ por $q$. Así que tenemos:
+Obviamente la elección u orden de $p$ o $q$ es arbitraria, así que la ecuación  \ref{rsa3} también es verdadera si reemplazamos $p$ por $q$. Así que tenemos:
 $$p|(m^{ed}-m) \qquad \text{ y } \qquad q|(m^{ed}-m).$$
 Como $p$ y $q$ son primos distintos, entonces concluimos que $pq|(m^{ed}-m)$, es decir, $$m^{ed} \equiv m \pmod{pq}.$$
 \end{proof}
 
-\begin{ejemplo} Probemos el sistema en forma práctica usando primos pequeños, por ejemplo $p=31$, $q=73$. En este caso $n = pq = 2\,263$. 
+\begin{ejemplo*} Probemos el sistema en forma práctica usando primos pequeños, por ejemplo $p=31$, $q=73$. En este caso $n = pq = 2\,263$. 
 
 Busquemos ahora un $e$:  tenemos que $ (p-1)(q-1)= 30\cdot 72 = 2\,160$. Vemos que $2$, $3$, $5$ dividen a $2\,160$, pero $7$ es coprimo con $2\,160$. 
 Tomemos entonces $e = 7$.
@@ -681,11 +680,11 @@ y envía, por una vía insegura, por ejemplo un email, el número $1\,417$ al re
 $$
 1\,417^{1\,543} \pmod{2\,160}
 $$ 
-y obtiene nuevamente $1\,993$ (si quiere convencerse de esto ingrese {\tt (1\,417 \^{} 1\,543) mod 2\,160} a la ventana de búsqueda de \href{https://www.wolframalpha.com}{Wolfram Alpha}).
+y obtiene nuevamente $1\,993$ (si quiere convencerse de esto ingrese \texttt{(1\,417\^{}1\,543) mod 2\,160} a la ventana de búsqueda de \href{https://www.wolframalpha.com}{Wolfram Alpha}).
 
 Pese a que el cálculo de desencriptado (en este caso $1\,417^{1\,543} \pmod{2\,160}$) puede parecer costoso computacionalmente, hay métodos eficientes para hacerlo. 
 
-\end{ejemplo}
+\end{ejemplo*}
 
 
 Una propiedad importante del RSA es que puede ser usado para firma digital o autenticación. En las hipótesis de la proposición \ref{rsa}, es claro que lo que probamos es que 
@@ -705,7 +704,7 @@ para $m \in \{0,\ldots,n-1\}$. Por lo tanto, el receptor puede codificar un núm
 Lo interesante de esto es que si el receptor envía $m$ (el mensaje) y $b$ (la codificación de $m$), cualquiera puede comprobar que el mensaje ha sido codificado por el receptor (y no por otra persona) verificando  que   $m \equiv b^e \pmod{n}$.     
 
 
-\begin{ejemplo}
+\begin{ejemplo*}
 Como ya hemos mencionado, podemos ver que el RSA también puede ser usado para un sistema de \emph{autenticación}, es decir es posible comprobar quien es la persona que envía el mensaje. Veamos una forma de hacerlo: la persona $A$ tiene clave pública $(e,n)$ y clave privada $d$ y   la persona $B$  tiene clave pública $(e',n')$ y clave privada $d'$. 
 
 \begin{enumerate}[label=(\alph*)]
@@ -719,17 +718,16 @@ Como ya hemos mencionado, podemos ver que el RSA también puede ser usado para u
 
 
 
-\end{ejemplo}
+\end{ejemplo*}
 %\end{section}
 \section{Ejercicios}
-%\subsection*{\Large $\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
 \begin{enumerate}
 \item Determinar todas las posibles soluciones de las congruencias
 \begin{enumerate}
-	\item  $5x\equiv1 \pmod{11},$
-	
-	\item  $5x\equiv 7 \pmod{15}.$
+    \item  $5x\equiv1 \pmod{11},$
+    
+    \item  $5x\equiv 7 \pmod{15}.$
 \end{enumerate}
 %$$
 %\text{(i)}\quad 5x\equiv1 \pmod{11},\qquad\, \text{(ii)}\quad
